[gd_scene load_steps=9 format=3 uid="uid://d243sqiodghwd"]

[ext_resource type="Script" path="res://scripts/element_placeable_object.gd" id="1_eow3j"]
[ext_resource type="Script" path="res://scripts/state_machine/elements/idle_state.gd" id="2_78mjr"]
[ext_resource type="Script" path="res://scripts/state_machine/elements/element_state_machine.gd" id="2_wliu3"]
[ext_resource type="Script" path="res://scripts/state_machine/elements/dragged_state.gd" id="3_y8tf0"]
[ext_resource type="Script" path="res://scripts/state_machine/elements/immovable_state.gd" id="5_nv6um"]

[sub_resource type="Gradient" id="Gradient_w13t2"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3208d"]
gradient = SubResource("Gradient_w13t2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o2xuv"]
size = Vector2(64, 64)

[node name="Element" type="Node2D"]
z_index = 10
script = ExtResource("1_eow3j")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("_initial_state")]
script = ExtResource("2_wliu3")
_initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("area_2d")]
script = ExtResource("2_78mjr")
area_2d = NodePath("../../Area2D")

[node name="DraggedState" type="Node" parent="StateMachine" node_paths=PackedStringArray("area_2d")]
script = ExtResource("3_y8tf0")
area_2d = NodePath("../../Area2D")

[node name="ImmovableState" type="Node" parent="StateMachine"]
script = ExtResource("5_nv6um")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 64.5)
texture = SubResource("GradientTexture1D_3208d")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_o2xuv")
